# GL_triangle

./: CMakeLists.txt
shaders/: frag.glsl  vert.glsl
src/: main.cpp
